--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
   	<h1>Bonjour, moi c'est Zoé 🌸 </h1>
-  	<img src="image/photo surf.jpg" class="img-circle" width="100px" alt="ma photo avant une session de surf">
+  	<img src="image/photo-surf.jpg" class="img-circle" width="100px" alt="ma photo avant une session de surf">
   	<p>Étudiante en Bachelor in Management spécialisation entrepreneuriat à Audencia Business School. <br> Je suis une passionée de voyages mais j'aime également le sport comme le surf, la danse ou encore la course à pied. Du côté créatif, j'adore le dessin !</p>
   	<a href="https://www.linkedin.com/in/zoecolin/"target="_blank">Mon Linkedin </a>  
   </div>  
